Removed Image part

--- a/smartcontactmanager/src/main/resources/templates/normal/profile.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/profile.html
@@ -16,10 +16,10 @@
 
 				<div class="card-body">
 				
-				<div class="container text-center">
+				<!-- <div class="container text-center">
 					<img style="height: 200px; width: 200px" class="my_profile_picture"
-						src="" th:src="@{'/img/' + ${user.imageUrl}}" alt="profile photo" />
-				</div>
+						src="" th:src="@{'data:image/png;base64,' + ${user.imageUrl}}" alt="profile photo" />
+				</div> -->
 				
 				<h1 class="text-center mt-3" th:text="${user.name}"></h1>
 
