--- a/smartcontactmanager/src/main/resources/templates/normal/user_dashboard.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/user_dashboard.html
@@ -13,11 +13,11 @@
 
 				<div class="card-body my-5">
 
-					<div class="container text-center">
+					<!-- <div class="container text-center">
 						<img style="height: 200px; width: 200px"
 							class="my_profile_picture" src=""
 							th:src="@{'/img/contact.png'}" alt="profile photo" />
-					</div>
+					</div> -->
 					
 					<h1 class="text-center mt-3 text-secondary font-italic font-weight-light">
 						Start Adding your contact...
