--- a/smartcontactmanager/src/main/resources/templates/normal/contact_detail.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/contact_detail.html
@@ -13,8 +13,8 @@
 			<div class="card-body">
 
 				<div class="container text-center">
-					<img style="height: 200px; width: 200px" class="my_profile_picture"
-						src="" th:src="@{'/img/' + ${contact.image}}" alt="profile photo" />
+					<!-- <img style="height: 200px; width: 200px" class="my_profile_picture"
+						src="" th:src="@{'data:image/png;base64,' + ${contact.image}}" alt="profile photo" /> -->
 
 					<h3 class="mt-3">
 						<span th:text="${contact.name}"></span> (<span
